# omega-brain-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  INTEGRATIONS.md  README.md  SECURITY.md  generate_tech_manual.py  omega_brain_mcp_standalone.py  omega_client.py  pyproject.toml  requirements.txt  test_pipeline.py  veritas_auto_claim.py  veritas_build_gates.py
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: integration.md
examples/: autogen_quickstart.py  crewai_quickstart.py  langchain_quickstart.py  llamaindex_quickstart.py
tests/: test_build_gates.py  test_cortex.py  test_exceptions.py  test_handoff.py  test_rag.py  test_seal.py  test_steer.py  test_vault.py  test_veritas.py
